--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
-            <p>Pirority Listing</p>
+            <p>Priority Listing</p>
             <p>Unlimited App Usage</p>
             <button type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
           </div>
