--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!---Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
   <!--- Bootstrap --->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="#">tindog</a>
+        <a class="navbar-brand" href="#"><img src="images/tinder-32.png" style="display: inline-block;"><span style="display: inline-block">  tindog</span></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -175,7 +175,7 @@
 
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
-            <p>Priority Listing</p>
+            <p>Pirority Listing</p>
             <p>Unlimited App Usage</p>
             <button type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
           </div>
